--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     </p>
     <ul>
-        <li> <a href="livro/minhalista.pdf" download="minhalista.pdf" type="application/
+        <li> <a href="Apresentação   SCRUM .pdf" download="Apresentação   SCRUM .pdf" type="application/
         pdf">baixa o livro em pdf</a></li>
-        <li><a href="livro/minhalista.zip" download="minhalista.zip" type="application/zip">
+        <li><a href="A medição da glicose.rar" download="A medição da glicose.rar" type="application/zip">
                 livro compactado em zip </a></li>
     </ul>
 
